minor tweak to parameters

--- a/tortoise_pva_shiny.Rmd
+++ b/tortoise_pva_shiny.Rmd
@@ -36,14 +36,14 @@ shinyApp(
       sidebarPanel(
         h4(p(strong("Demographic Rates"))),
         numericInput("ma", "Age of maturity:", 18, min = 5, max = 30),
-        numericInput("bp", "Probability that a female lays eggs:", 0.97, 0, 1, step=0.01),
+        numericInput("bp", "Probability of laying eggs:", 0.97, 0, 1, step=0.01),
         numericInput("f", "Clutch size:", 6, 0, 25, step=1),
         numericInput("ns", "Probability of nest survival:", 0.35, 0, 1, step=0.01),
         numericInput("ve", "Probability of egg viability:", 0.85, 0, 1, step=0.01),
         numericInput("pf", "Probability of female:", 0.5, 0, 1, step=0.01),
         numericInput("s_h", "Probability of hatchling survival:", 0.13, 0, 1, step=0.01),
-        numericInput("s_j", "Probability of juvenile survival:", 0.75, 0, 1, step=0.01),
-        numericInput("s_a", "Probability of adult survival:", 0.96, 0, 1, step=0.01),
+        numericInput("s_j", "Probability of juvenile survival:", 0.8, 0, 1, step=0.01),
+        numericInput("s_a", "Probability of adult survival:", 0.98, 0, 1, step=0.01),
         numericInput("n", "Initial population size:", 50, 0, 10000, step=1),
         br(),
         h4(p(strong("Simulation Inputs"))),
